--- a/src/uMod.HumanFallFlat.csproj
+++ b/src/uMod.HumanFallFlat.csproj
@@ -47,13 +47,13 @@
       <HintPath>Dependencies\Patched\$(ManagedDir)\HumanAPI.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
-      <HintPath>Dependencies\Base\mscorlib.dll</HintPath>
+      <HintPath>Dependencies\Patched\$(ManagedDir)\mscorlib.dll</HintPath>
     </Reference>
     <Reference Include="System">
-      <HintPath>Dependencies\Base\System.dll</HintPath>
+      <HintPath>Dependencies\Patched\$(ManagedDir)\System.dll</HintPath>
     </Reference>
     <Reference Include="System.Core">
-      <HintPath>Dependencies\Base\System.Core.dll</HintPath>
+      <HintPath>Dependencies\Patched\$(ManagedDir)\System.Core.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>Dependencies\Patched\$(ManagedDir)\UnityEngine.dll</HintPath>
