--- a/src/uMod.HumanFallFlat.csproj
+++ b/src/uMod.HumanFallFlat.csproj
@@ -5,12 +5,12 @@
     <Version>3.0.0</Version>
     <AssemblyName>uMod.HumanFallFlat</AssemblyName>
     <Authors>The uMod Project Team and Contributors</Authors>
-    <Description>Human Fall Flat extension for the uMod modding framework</Description>
-    <RepositoryUrl>https://github.com/theumod/uMod.HumanFallFlat</RepositoryUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/theumod/uMod.HumanFallFlat</PackageProjectUrl>
-    <PackageIconUrl>https://assets.umod.org/images/umod-64.png</PackageIconUrl>
     <Copyright>Copyright (c) 2013-$([System.DateTime]::Now.Year) $(Authors)</Copyright>
+    <Description>Human: Fall Flat game extension for the uMod modding framework</Description>
+    <PackageIconUrl>https://assets.umod.org/images/umod-64.png</PackageIconUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://umod.org</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/theumod/uMod.HumanFallFlat</RepositoryUrl>
     <PackageTags>gaming modding plugins unity unity3d</PackageTags>
     <ThisAssemblyNamespace>$(AssemblyName)</ThisAssemblyNamespace>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
